<resources>
    <string name="app_name">Pop Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="rating">%1$s/10</string>
    <string name="connection_error_message">Check your internet connection and try again.</string>
    <string name="error_loading_trailers">Failed to load trailers and reviews.\nCheck your internet connection and try again.</string>
    <string name="retry">Retry</string>
    <string name="mark_favorite">Mark as\nfavorite</string>
    <string name="trailers">Trailers:</string>
    <string name="chooser_title">Open with</string>
    <string name="reviews">Reviews:</string>
    <string name="delete_from_favorite">Remove from \nfavorites</string>
    <string name="no_favotite">You have no favorite movies yet</string>
    <string name="action_share">Share</string>
</resources>
