<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_cyan"
            android:gravity="center_vertical|left"
            android:padding="26dp"
            android:text="afc"
            android:textColor="@android:color/white"
            android:textSize="30sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:adjustViewBounds="true" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btn_fav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_margin"
                    android:background="@color/light_cyan"
                    android:padding="10dp"
                    android:text="@string/mark_favorite"
                    android:textSize="14sp" />


            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="16sp" />


        <LinearLayout
            android:id="@+id/ll_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/tv_trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/trailers"
                android:textSize="16sp" />

            <ListView
                android:id="@+id/lv_trailers"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/tv_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/reviews"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/ll_reviews_container"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="@dimen/activity_margin"
                android:orientation="vertical" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_no_internet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/activity_margin"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/error_loading_trailers"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin"
                android:text="@string/retry" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
